--- a/src/main/resources/tools4ai.properties
+++ b/src/main/resources/tools4ai.properties
@@ -2,3 +2,5 @@ modelName=gemini-1.0-pro
 location=us-central1
 projectId=cookgptserver 
 openAiKey=
+openAiModelName=grok-2-1212
+openAiBaseURL=https://api.x.ai/v1
