--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ management.endpoint.health.show-details=always
 management.server.port=8081
 management.endpoints.web.cors.allowed-origins=http://localhost:4200/
 management.endpoints.web.cors.allowed-methods=GET
+allowed-origins=http://localhost:4200
+allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+allowed-headers=*
+allow-credentials=true
+arduino.ip=
